Privacy filter, refactor background pages

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -120,7 +120,7 @@
                 <img src="/assets/index-clock.png" alt="">
               </div>
 
-              <div class="title">Recommended</div>
+              <div class="title">Star</div>
             </div>
           </div>
 
