--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -2,7 +2,18 @@
 
 :host { z-index: 1; width: 100%; height: 100%; display: block; position: absolute; }
 
-.page { height: 100%; background-color: $primary-bg; }
+.page {
+  height: 100%;
+  background-color: $primary-bg;
+
+  .welcome {
+    padding: 20px 0 0;
+    background-color: #666;
+    img { width: 100%; }
+  }
+
+  .window-container { overflow: hidden; }
+}
 
 .window {
   transition: 0.5s all;
@@ -10,90 +21,90 @@
   width: 100%;
   opacity: 0;
 
-  &.left {
-    transform: translateX(-100%);
-  }
-
+  &.left { transform: translateX(-100%); }
   &.middle { transform: translateX(0); opacity: 1; }
+  &.right { transform: translateX(100%); }
 
-  &.right {
-    transform: translateX(100%);
-  }
-}
+  .banner {
+    padding: 12px;
+    margin-bottom: 15px;
+    position:relative;
+    background-color: $primary-bg-dark;
 
-.window-container {
-  overflow: hidden;
-}
+    &:after {
+      content: ' ';
+      width: 0;
+      height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-top: 10px solid $primary-bg-dark;
+      position: absolute;
+      bottom: -10px;
+      left: 0;
+      right: 0;
+      margin: auto;
+      z-index: 2;
+    }
 
-.welcome {
-  padding: 20px 0 0;
-  background-color: #666;
-  img { width: 100%; }
-}
+    .banner-text {
+      font-size: 12px;
+      color: #50aeb7;
+      margin: 0 0 5px 60px;
+    }
 
-.banner {
-  padding: 12px;
-  margin-bottom: 15px;
-  position:relative;
-  background-color: $primary-bg-dark;
-
-  &:after {
-    content: ' ';
-    width: 0;
-    height: 0;
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-top: 10px solid $primary-bg-dark;
-    position: absolute;
-    bottom: -10px;
-    left: 0;
-    right: 0;
-    margin: auto;
-    z-index: 2;
-  }
-
-  .banner-text {
-    font-size: 12px;
-    color: #50aeb7;
-    margin: 0 0 5px 60px;
+    .logo {
+      color: #fff;
+      font-size: 20px;
+      text-align: center;
+      img { height: 23px; }
+    }
   }
 
-  .logo {
-    color: #fff;
-    font-size: 20px;
+  .upper-text {
     text-align: center;
-    img { height: 23px; }
+    color: #5fbbc4;
+    font-size: 16px;
+    margin: 30px 0 25px;
   }
-}
 
-.email-text {
-  text-align: center;
-  color: #5fbbc4;
-  font-size: 16px;
-  margin: 35px 0 20px;
-}
+  .lower-text {
+    text-align: center;
+    color: #fff;
+    font-size: 16px;
+    margin: 10px 0 0;
+    padding: 20px;
+    a { color: #5fbbc4; cursor: pointer; font-size: 16px; }
+  }
 
-.email-input {
-  position: relative;
-  padding: 0 20px;
-}
+  .input-wrapper {
+    position: relative;
+    padding: 0 20px;
 
-.login-input {
-  position: relative;
-  padding: 40px 20px;
+    input {
+      height: 50px;
+      width: 100%;
+      padding: 5px 30px 5px 10px;
+      background-color: #0d1e26;
+      border: 1px solid #19474c;
+      border-radius: 5px;
+      color: #fff;
+      font-size: 16px;
+    }
+  }
 
-  button { top: 45px; }
-}
+  .register-back {
+    color: #5fbbc4;
+    font-size: 16px;
+    margin: 25px 20px 0;
+    cursor: pointer;
+  }
 
-input {
-  height: 50px;
-  width: 100%;
-  padding: 5px 30px 5px 10px;
-  background-color: #0d1e26;
-  border: 1px solid #19474c;
-  border-radius: 5px;
-  color: #fff;
-  font-size: 16px;
+  .login-back {
+    color: #5fbbc4;
+    font-size: 16px;
+    margin: 110px 20px 0;
+    cursor: pointer;
+  }
 }
 
 button {
@@ -103,19 +114,7 @@ button {
   border: 0;
   right: 25px;
   top: 0px;
-  font-size: 30px;
-  line-height: 30px;
+  font-size: 40px;
+  line-height: 40px;
   cursor: pointer;
-}
-
-.back {
-  color: #5fbbc4;
-  font-size: 16px;
-  margin: 65px 20px;
-}
-
-.login-back {
-  color: #5fbbc4;
-  font-size: 16px;
-  margin: 30px 20px;
 }
