--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -49,7 +49,7 @@
         <div class="subtitle bold">
           {{ selectedRouteServerName }}
           <br>
-            ( {{selectedRouteType()}} )
+            ( {{ selectedRouteType() }} )
         </div>
       </div>
 
@@ -115,12 +115,13 @@
 
         <div class="row">
           <div class="third">
-            <div class="button disabled">
+            <div class="button" (click)="selectRouteType('STAR')" [ngClass]="{'checked': selectedRouteOpt === 'STAR', 'disabled': !starServerFlag }">
               <div class="icon">
-                <img src="/assets/index-clock.png" alt="">
+                <img src="{{starServerFlag}}" alt="" *ngIf="starServerFlag">
+                <span class="star" *ngIf="!starServerFlag">&#9733;</span>
               </div>
 
-              <div class="title">Star</div>
+              <div class="title">{{starServerName}}</div>
             </div>
           </div>
 
