--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -51,45 +51,55 @@
     <div class="section-header">Select Proxy Mode</div>
 
     <div class="country-select kill-height">
-      <div class="location-row" (click)="useCypherplay()" [ngClass]="{'checked': proxyMode === 'SMART' }">
+      <div class="option" (click)="useCypherplay()" [ngClass]="{'checked': proxyMode === 'SMART' }">
         <span class="name">CypherPlay</span>
       </div>
 
-      <div class="location-row" (click)="useFastest()" [ngClass]="{'checked': proxyMode === 'FASTEST' }">
+      <div class="option" (click)="useFastest()" [ngClass]="{'checked': proxyMode === 'FASTEST' }">
         <span class="name">Fastest</span>
       </div>
 
-      <div class="location-row" (click)="useFastestUK()" [ngClass]="{'checked': proxyMode === 'FASTESTUK' }">
+      <div class="option" (click)="useFastestUK()" [ngClass]="{'checked': proxyMode === 'FASTESTUK' }">
         <span class="name">Fastest UK</span>
       </div>
 
-      <div class="location-row" (click)="useFastestUS()" [ngClass]="{'checked': proxyMode === 'FASTESTUS' }">
+      <div class="option" (click)="useFastestUS()" [ngClass]="{'checked': proxyMode === 'FASTESTUS' }">
         <span class="name">Fastest US</span>
       </div>
 
-      <div class="location-row" (click)="useNoProxy()" [ngClass]="{'checked': proxyMode === 'NONE' }">
+      <div class="option" (click)="useNoProxy()" [ngClass]="{'checked': proxyMode === 'NONE' }">
         <span class="name">No Proxy</span>
       </div>
 
-      <div class="location-row" (click)="useServer()">
+      <div class="option" (click)="useServer()">
         <span class="name" *ngIf="!showServers">Select Server</span>
         <span class="name" *ngIf="showServers">Hide Servers</span>
       </div>
 
-      <div *ngIf="showServers">
+      <div class="location-container" *ngIf="showServers">
         <div *ngFor="let server of serverArr; let i = index;">
           <div class="region" *ngIf="i === 0 || (!(i === 0) && serverArr[i-1].region !== server.region)">
             {{regions[server.region]}}
           </div>
 
-          <div class="location-row kill-height" (click)="selectProxy(server)" [ngClass]="{'checked': selectedServerId === server.id, 'disabled': !server.enabled || !server.httpDefault.length }">
-            <span class="flag">
-              <img src="{{'/assets/flags/24/' + server.country + '.png' }}" />
-            </span>
-            <span class="name">{{server.name}}</span>
-            <span *ngIf="server.level === 'premium'" class="premium">Premium</span>
-            <span *ngIf="!server.httpDefault.length" class="unavailable">Unavailable</span>
+          <div class="location" [ngClass]="{'checked': selectedServerId === server.id, 'disabled': !server.enabled || !server.httpDefault.length }">
+            <!-- server row -->
+            <div class="location-row kill-height" (click)="selectProxy(server)" [ngClass]="{'checked': selectedServerId === server.id, 'disabled': !server.enabled || !server.httpDefault.length }">
+              <span class="flag">
+                <img src="{{'/assets/flags/24/' + server.country + '.png' }}" />
+              </span>
+              <span class="name">{{server.name}}</span>
+              <span *ngIf="server.level === 'premium'" class="premium">Premium</span>
+              <span *ngIf="!server.httpDefault.length" class="unavailable">Unavailable</span>
+            </div>
+
+            <!-- starring server -->
+            <div class="starred">
+              <span (click)="unstarServer(server)" *ngIf="isStarred(server)">&#9733;</span>
+              <span (click)="starServer(server)" *ngIf="!isStarred(server)">&#9734;</span>
+            </div>
           </div>
+
         </div>
       </div>
     </div>
