--- a/src/app/selected-server/selected-server.component.html
+++ b/src/app/selected-server/selected-server.component.html
@@ -1,22 +1,33 @@
 <div id="sub-menu">
   <div id="header" routerLink="/" routerLinkActive="active" class="bottom-separator">
-    <span class="back-icon">&#x3008;</span>{{title}}
+    <span class="back-icon">&#x3008;</span>Selected Server
   </div>
 
   <div class="country-select">
     <div *ngFor="let server of serverArr; let i = index;">
+      <!-- regions row -->
       <div class="region" *ngIf="i === 0 || (!(i === 0) && serverArr[i-1].region !== server.region)">
         {{regions[server.region]}}
       </div>
 
-      <div class="location-row" (click)="selectProxy(server)" [ngClass]="{'checked': selectedServerId === server.id, 'disabled': !server.enabled || !server.httpDefault.length }">
-        <span class="flag">
-          <img src="{{'/assets/flags/24/' + server.country + '.png' }}" />
-        </span>
-        <span class="name">{{server.name}}</span>
-        <span *ngIf="server.level === 'premium'" class="premium">Premium</span>
-        <span *ngIf="!server.httpDefault.length" class="unavailable">Unavailable</span>
+      <div class="location" [ngClass]="{'checked': selectedServerId === server.id, 'disabled': !server.enabled || !server.httpDefault.length }">
+        <!-- server row -->
+        <div class="location-row" (click)="selectProxy(server)">
+          <span class="flag">
+            <img src="{{'/assets/flags/24/' + server.country + '.png' }}" />
+          </span>
+          <span class="name">{{server.name}}</span>
+          <span *ngIf="server.level === 'premium'" class="premium">Premium</span>
+          <span *ngIf="!server.httpDefault.length" class="unavailable">Unavailable</span>
+        </div>
+
+        <!-- starring server -->
+        <div class="starred">
+          <span (click)="unstarServer(server)" *ngIf="isStarred(server)">&#9733;</span>
+          <span (click)="starServer(server)" *ngIf="!isStarred(server)">&#9734;</span>
+        </div>
       </div>
+
     </div>
   </div>
 </div>
