--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,17 @@
 <div class="page" *ngIf="!showConfirm">
   <div class="welcome">
-    <img src="/assets/welcome.png" alt="">
+    <img src="/assets/signin@2x.png" alt="">
+
+    <div class="scrolling-binary">
+      <div class="right">
+        01101111 01110010 01101001 01100111 01101001 01101110 01101111 01110010 01101001 01100111
+        01101111 01110010 01101001 01100111 01101001 01101110 01101111 01110010 01101001 01100111
+      </div>
+      <div class="left">
+        01100001 01101100 00100000 01100110 01101111 01110010 01100001 01101100 00100000 01100110
+        01101111 01110010 01101001 01100111 01101001 01101110 01101111 01110010 01101001 01100111
+      </div>
+    </div>
   </div>
 
   <div class="window-container">
