Update login marquee with cyphertext

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,12 +4,12 @@
 
     <div class="scrolling-binary">
       <div class="right">
-        01101111 01110010 01101001 01100111 01101001 01101110 01101111 01110010 01101001 01100111
-        01101111 01110010 01101001 01100111 01101001 01101110 01101111 01110010 01101001 01100111
+        x`8 0 # = v 7 mb" | y 9 # 8 M ] _ + kl $ #mn x -( ]e f l]> ! 03 @jno x~`.xl ty ][sx k j
+        x`8 0 # = v 7 mb" | y 9 # 8 M ] _ + kl $ #mn x -( ]e f l]> ! 03 @jno x~`.xl ty ][sx k j
       </div>
       <div class="left">
-        01100001 01101100 00100000 01100110 01101111 01110010 01100001 01101100 00100000 01100110
-        01101111 01110010 01101001 01100111 01101001 01101110 01101111 01110010 01101001 01100111
+        dsK 7 & [*h ^% u x 5 8 00 M< K! @ &6^d jkn 70 :93jx p0 bx, 890 Qw ;é " >?7 9 3@ [ 5x3 >
+        dsK 7 & [*h ^% u x 5 8 00 M< K! @ &6^d jkn 70 :93jx p0 bx, 890 Qw ;é " >?7 9 3@ [ 5x3 >
       </div>
     </div>
   </div>
